--- a/sites/stamped.com/bin/www/templates/privacy-mobile.html
+++ b/sites/stamped.com/bin/www/templates/privacy-mobile.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name = "viewport" content = "width=320,user-scalable=no">
 <link rel="stylesheet" href="http://static.stamped.com/assets/css/normalize.css" type="text/css" media="screen" />
 <style type="text/css">
 body, html{background-color:transparent;}
