--- a/sites/stamped.com/bin/alerts/templates/email_now_available.html
+++ b/sites/stamped.com/bin/alerts/templates/email_now_available.html
@@ -36,13 +36,13 @@
                                     <table width="600" cellpadding="0" cellspacing="0">
                                         <tr>
                                             <td width="600" height="36" align="center" valign="bottom" style="color:#595959;font-family:Helvetica,Arial;font-size:16px;line-height:26px;">
-                                                We know it's been a long wait, but we're excited to let you know that <br>Stamped is now available in the App Store. Happy stamping!
+                                                We know it's been a long wait, but we're excited to let you know that <br>Stamped is now available in the <a href="http://www.stamped.com/download" style="text-decoration:none;font-weight:bold;color:#377AD9;">App Store</a>. Happy stamping!
                                             </td>
                                         </tr>
                                         
                                         <tr>
                                             <td width="600" height="120" align="center" valign="middle">
-                                                <a href="http://www.stamped.com/download"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Free Download - Available in the App Store"></a>
+                                                <a href="http://www.stamped.com/download"><img src="http://static.stamped.com/assets/img/email-button-download.png" width="245" height="82" alt="Download in the App Store"></a>
                                             </td>
                                         </tr>
                                         
